k8s/networkpolicies/np-frontend-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: dev
  labels:
    app.kubernetes.io/name: frontend-to-backend
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: frontend
      ports:
        - port: 8080
          protocol: TCP
---
# Réappliquez ce manifest dans staging/prod en adaptant le namespace si besoin.
